--- a/package.json
+++ b/package.json
@@ -5,30 +5,28 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KieranHannagan/just-tech-news.git"
   },
-  "author": "",
+  "author": "Kieran",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/KieranHannagan/just-tech-news/issues"
   },
   "homepage": "https://github.com/KieranHannagan/just-tech-news#readme",
   "keywords": [],
-  "start": "nodemon ",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "jest": "^27.4.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
